--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
+# ---- NodeJS
+# dependencies
+/docker/**/node_modules
+/docker/**/.pnp
+/docker/**/.pnp.js
+
+# testing
+docker/**/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ---- Python
+/docker/**/__pycache__
+
+
+
+# ---- C
+
 # Prerequisites
 *.d
 
